_sass/elements.scss
html {
	background: $coolgray;
}

html, body {
	margin: 0;
	padding: 0;
	min-width: 360px;
}
::-webkit-scrollbar {
    width: 0.5rem; 
}
::-webkit-scrollbar-track {
    background: var(--background-light); 
}
::-webkit-scrollbar-thumb {
    background:var(--scrollbar-color); 
    border-radius: 0.3rem; 
}
::-webkit-scrollbar-thumb:hover {
    background: #555; 
}

body {
	font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
	background:var(--background-light) !important;
	transition: all .5s;
}

a {
	transition: color .2s;
	color: var(--brand-color-primary);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
	color: var(--brand-color-secondary);
}

img {
	// width: 100%;
}

h1 strong, h2 strong {
	font-weight: 700;
}

h1 {
	font-weight: 300;
	font-size: 2.3em;
	margin: 0;
	color: var(--color-secondary-dark);

}

span.special-text{
	-webkit-box-decoration-break: clone;
	box-decoration-break: clone;
	background: var(--background-primary-2);
	color: white;
	padding: 0 .5rem;
	border-radius: 3px;
	animation: reveal 1s forwards;
	font-weight: 500;
	opacity: 0;
}
.div-skew{
	// width: fit-content;
	display: inline-block;
}

h2 {
	font-weight: 300;
	font-size: 2.2em;
	margin: 0 0 30px 0;
	color: var(--color-secondary-medium);
}

h2.sub-text{
	color: var(--color-secondary-light);
}

h3 {
	font-size: 2em;
	margin: 20px 0 10px 0;
	color: var(--color-secondary-dark);
}

h4, h5, h6{
	color: var(--color-secondary-dark);
}


p, address {
	font-size: 1.38em;
	color: var(--color-grey-light);
	margin-bottom: 20px;
	font-weight: 300;
	line-height: 1.4em;
}

p.grey-bg-text{
	color: var(--color-secondary-medium);
}

ul{
	color: var(--color-secondary-dark);
}

li.heading{
	background: var(--background-primary);
	padding: .2rem 1rem;
	text-align: center;
}

.bg-grey-300{
	background: var(--background-light-cards);
	box-shadow: var(--box-shadow-primary);
}

@keyframes glow {
    from {
      text-shadow: 0 0 20px #2d9da9;
    }
    to {
      text-shadow: 0 0 30px #34b3c1, 0 0 10px #4dbbc7;
    }
  }

  @keyframes reveal {
	  from{
		  opacity: 0;
		  transform: skewX(20deg);

	  }
	  to{
		opacity: 1;
		transform: skewX(0deg);
	}
  }

